swatch-system-conduit: sonar fixes
- remove useless `eq` invocation
- replace ImmutableSet.of w/ Set.of